--- a/Boeing challenge.ipynb
+++ b/Boeing challenge.ipynb
@@ -12219,8 +12219,7 @@
     "df=df.sort_values(['datetime','Airline','Port_Country']).reset_index(drop=True)\n",
     "\n",
     "#Group by Airline and datetime, to obtain aggregate for each month of each Airline:\n",
-    "#Note: Port_Country as a string will contain all Port_Country occurrences for each month, separated by a comma\n",
-    "#      (useful to compare port countries of old and new airline name to find similarities later on)\n",
+    "#Note: Port_Country as a string will contain all Port_Country occurrences for each month, separated by a comma (useful to compare port countries of old and new airline name to find similarities later on)\n",
     "df_monthly_stats = df.groupby(['Airline','datetime']).agg(\n",
     "                                                Passengers_In=('Passengers_In','sum'),\n",
     "                                                Passengers_Out=('Passengers_Out','sum'),\n",
